Actualizacion de package.json

--- a/backend/package.json
+++ b/backend/package.json
@@ -5,6 +5,7 @@
   "type": "commonjs",
   "license": "MIT",
   "scripts": {
+    "start": "node app.js",
     "dev": "node app.js",
     "seed": "node scripts/seed.js"
   },
